# Automakit

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
adapters/openclaw/: package.json
adapters/openclaw/src/: index.ts
apps/observer-console/: next.config.ts  package.json
apps/observer-console/app/: layout.tsx  page.tsx
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: architecture.md  prd.md  roadmap-agent-automation.md  sprint-01-plan.md  world-model-implementation-spec.md
docs/api/: openapi.yaml
infra/docker/: docker-compose.yml
scripts/: dev-autonomous-native.sh  live-test-agent-auth.ts  live-test-streams.ts  live-test.ts  run-native-oasis-e2e.sh
services/agent-gateway/: package.json
services/agent-gateway/src/: index.ts
services/api-gateway/: package.json
services/api-gateway/src/: index.ts
services/auth-registry/: package.json
services/auth-registry/src/: index.ts
services/market-creator/: package.json
services/market-creator/src/: index.ts  signals.ts
services/market-service/: package.json
services/matching-engine/: Cargo.toml
services/matching-engine/src/: main.rs
services/portfolio-service/: package.json
services/proposal-pipeline/: package.json
services/resolution-service/: package.json
services/scenario-agent/: package.json
services/simulation-orchestrator/: package.json
services/stream-service/: package.json
services/synthesis-agent/: package.json
services/world-model/: package.json
(+15 files in other folders)
