[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
uuid = { version = "1", features = ["v4", "serde"] }
